@@ -1,1 +1,18 @@
 # OOP-Project
+**Project title:** NUMBER SYSTEM CONVERTER
+
+**Project description:**
+This project aims at converting numbers from one number system into their respected values in another number system (for example, from decimal to hexadecimal, etc.) by taking user's choice from which number system to which and the user input number. There are in total six choices to perform a conversion. 
+
+**Software & libraries used:**
+Java, JavaFX 11 (including JavaFX 11 libraries)
+
+**Installation instructions:**
+1. Download the file "Project"
+2. Unzip it 
+3. Open the project with Java compiler (IntelliJ, etc.) 
+4. Add JavaFx libraries in File->Project Structure
+5. Add VM options "--module-path ${PATH_TO_JAVAFX} --add-modules javafx.controls,javafx.fxml" in "Edit Confidurations" 
+6. Run the App.java file
+
+
